# copilot-spend

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  test.yml
src/copilot_spend/: __init__.py  __main__.py  api.py  auth.py  cli.py  login.py  output.py  paths.py  quota.py  session.py
tests/: test_api.py  test_auth.py  test_cli.py  test_login.py  test_output.py  test_paths.py  test_quota.py  test_session.py
