[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-spend"
version = "0.2.0"
description = "Print your current-period GitHub Copilot spend and reset date."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Niels Kootstra", email = "niels.kootstra@gmail.com" },
]
keywords = ["github", "copilot", "spend", "quota", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/nkootstra/copilot-spend"
Source = "https://github.com/nkootstra/copilot-spend"
Issues = "https://github.com/nkootstra/copilot-spend/issues"
Changelog = "https://github.com/nkootstra/copilot-spend/blob/main/CHANGELOG.md"
Documentation = "https://github.com/nkootstra/copilot-spend#readme"

[project.scripts]
copilot-spend = "copilot_spend.cli:_entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/copilot_spend"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are intentional

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "-q --cov=copilot_spend --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["copilot_spend"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
